# elf-converter

./: .gitignore  CMakeLists.txt  README.md  compile-all.sh  notatki.txt  prepare-solution.sh
bartek-test/: Makefile  converter  test-x64.c  test.c
elfio-3.11/: CMakeLists.txt
examples/custom/: extern_int.c  hello_world_x86_64  if_else  if_else.c  label.c
examples/polecenie/: Makefile  test
src/: AssemblyUtils.cpp  AssemblyUtils.h  CMakeLists.txt  ConvertManager.cpp  ConvertManager.h  ElfStructures.h  FunctionConverter.cpp  FunctionConverter.h  InstructionConverter.cpp  InstructionConverter.h  Utils.cpp  Utils.h  converter.cpp  converter.h  main.cpp  utils.cpp  utils.h
z1_test/: Makefile  common.c  data-aarch64.c  data-relocation-aarch64.c  data-relocation-x64.c  data-x64.c  multiargs-x64.c  multiargs.h  recurse-aarch64.c  recurse-x64.c
